--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     width: 700px;
     margin: auto;
     color: rgb(255, 0, 179);
-    font: italic small-caps bold 2em/2 cursive;
+    font: italic small-caps bold 16px/2 cursive;
     background-color: rgb(249, 197, 206);
     line-height: 150%;
     border: dashed rgb(255, 255, 255);
