--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+html {
+    scroll-behavior: smooth;
+}
+h1, h2 {
+    font-family: arial;
+    text-transform: uppercase;
+}
 body {
     width: 700px;
     margin: auto;
@@ -5,5 +12,21 @@ body {
     font: font: italic 1.2rem "Fira Sans", serif;
     background-color: rgb(249, 197, 206);
     line-height: 150%;
-    border: dashed rgb(255, 255, 255);
+h1, h3 {
+    text-align: center;
+}
+}
+nav ul {
+    list-style-type: none;
+}
+nav ul li a {
+    display: block;
+    background-color: rgb(255, 198, 237);
+    color: white;
+    font-family: arial;
+    font-weight: bold;
+    padding: 20px;
+    border: 5px solid white;
+    text-decoration: none;
+    margin-bottom: 5px;
 }
